# Parks-n-Rec

./: .gitmodules  CMakeLists.txt  build-release.sh  clean.sh
include/genetic/: genetic.h  operators.h  util.h
include/genetic/old/: genetic.h  operators.h
include/genetic/v2/: functions.h  genetic.h  util.h
include/genetic/v3/: arguments.h  functions_v3.h  program_v3.h  v3_functions.h
include/glad/: gl.h
include/parks/: app.h  config.h  error_logging.h  status.h  traits.h  window.h
include/parks/renderer/: OpenGL.h  engine.h  player.h  resources.h
include/parks/shader/: basic_shader.frag  basic_shader.vert  ui_shader.frag  ui_shader.vert
src/: perlin.cpp
src/genetic/v2/: functions.cpp  genetic_program.cpp
src/genetic/v3/: functions_v3.cpp  program_v3.cpp  v3_functions.cpp
src/imgui/: ImNodesEz.cpp
src/parks/: app.cpp  main.cpp  window.cpp
src/parks/renderer/: OpenGL.cpp  engine.cpp  player.cpp  resources.cpp
